Name der Schule wird vor dem Setzen des school-URL-Paramters als ISO-8859-1-String kodiert. Ausnahme: Leerzeichen wird als '%20' statt '+' kodiert.