@@ -21,11 +21,11 @@ package edu.htl3r.schoolplanner.backend.network;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.MalformedURLException;
+import java.io.UnsupportedEncodingException;
 import java.net.SocketTimeoutException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
+import java.net.URLEncoder;
 import java.net.UnknownHostException;
 import java.security.KeyStore;
 
@@ -94,7 +94,6 @@ public class Network implements NetworkAccess {
 	public String getResponse(String request) throws IOException {	
 		String response = null;
 		try {
-			Log.d("Network", "Using url: "+httpsUrl);
 			response = executeRequest(request);
 		}
 		catch (SocketTimeoutException e) {
@@ -184,14 +183,22 @@ public class Network implements NetworkAccess {
 	@Override
 	public void setSchool(String school) {
 		try {
-			URL url = new URL(serverUrl + "?school=" + school);
-			URL httpsUrl = new URL(httpsServerUrl + "?school=" + school);
-			this.url = new URI(url.getProtocol(), url.getHost(), url.getPath(), url.getQuery(), null);
-			this.httpsUrl = new URI(httpsUrl.getProtocol(), httpsUrl.getHost(), httpsUrl.getPath(), httpsUrl.getQuery(), null);
+			// Encode school as iso-8859-1 string
+			String encodedSchool = URLEncoder.encode(school,"ISO-8859-1");
+			
+			// Spaces get encoded as + but we need %20 instead
+			encodedSchool = encodedSchool.replace("+", "%20");
+			
+			url = new URI(serverUrl + "?school=" + encodedSchool);
+			httpsUrl = new URI(httpsServerUrl + "?school=" + encodedSchool);
+			
+			Log.d("Network", "Setting http url: "+url.toString());
+			Log.d("Network", "Setting https url: "+httpsUrl.toString());
+			
 		} catch (URISyntaxException e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
-		} catch (MalformedURLException e) {
+		} catch (UnsupportedEncodingException e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
